subdirectory_fix_gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# Base de datos (Using quotes for the space and prefix for the folder)
-"Taller1/Base de datos/*"
-!"Taller1/Base de datos/.gitkeep"
+# Base de datos - matches anywhere in the repo
+"**/Base de datos/*"
+!"**/Base de datos/.gitkeep"
 
 # Graficas
-"Taller1/Graficas/*"
-!"Taller1/Graficas/.gitkeep"
+"**/Graficas/*"
+!"**/Graficas/.gitkeep"
 
 # Regresiones
-"Taller1/Regresiones/*"
-!"Taller1/Regresiones/.gitkeep"
+"**/Regresiones/*"
+!"**/Regresiones/.gitkeep"
 
-# R específicos
+# R specific files
 .Rhistory
 .RData
 .Ruserdata
